[package]
name = "planetwars"
version = "0.1.2"
authors = ["ajuvercr <arthur.vercruysse@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mozaic = { git = "https://github.com/ZeusWPI/MOZAICP" }
rand = { version = "0.8.2", default-features = true }

async-std = { version = "1.9.0", features = ["attributes"] }
futures = { version = "0.3.12", features = ["executor", "thread-pool"] }

figment = "0.10.2"

serde = "1.0.119"
serde_derive = "1.0.119"
serde_json = "1.0"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["handlebars_templates", "tera_templates"] }

educe = { version = "0.4.13", features = ["Debug", "Default", "Hash", "Clone", "Copy"] }
