[package]
name = "client"
version = "0.1.0"
authors = ["ajuvercr <arthur.vercruysse@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mozaic = { git = "https://github.com/ajuvercr/MOZAIC" }
tokio = "0.1.22"
capnp = "0.10.1"
futures = "0.1.28"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0"
rand = { version = "0.6.5", default-features = true }
